--- a/public/templates/default/helpers/create_account.phtml
+++ b/public/templates/default/helpers/create_account.phtml
@@ -6,7 +6,7 @@
         <h4 class="modal-title">新アカウントを作る</h4>
       </div>
       <div class="modal-body">
-        <iframe class="create-account-ifame" src="<?php echo $this->baseUrl('/user/create-account');?>"></iframe>
+        <iframe class="create-account-ifame" src="<?php echo $this->baseUrl('/user/welcome');?>"></iframe>
       </div>
       <div class="modal-footer">
         <a onclick="login()">ログインに戻る</a>
