--- a/application/modules/default/views/scripts/product/detail.phtml
+++ b/application/modules/default/views/scripts/product/detail.phtml
@@ -1,14 +1,23 @@
+<?php
+
+?>
 <div class="wrapper row3">
   <main class="hoc container clear">
     <!-- main body -->
     <div class="content">
       <!-- ################################################################################################ -->
-      <h1>商品の情報</h1>
-      <img class="imgl borderedbox inspace-5" src="<?php echo $this->imgUrl; ?>/imgl.gif" alt="">
-      <p>This is a W3C compliant free website template from <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="http://www.os-templates.com/template-terms">website template licence</a>.</p>
-      <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more website templates visit our <a href="http://www.os-templates.com/">free website templates</a> section.</p>
-      <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
+      <h1>商品の情報</h1><hr>
+      <div style="display: inline-block; width: 100%; text-align: center;">
+        <img style="height:auto; width:auto;" src="<?php echo $this->productInfo['img']; ?>" alt="">
+      </div>
+      <div style="display: inline-block; text-align: center; width: 100%; margin-top: 20px;">
+        <h1 style="display: inline-block; width: 70%; color: #000;"><?php echo $this->productInfo['name']; ?></h1>
+      </div>
+      <div style="display: inline-block; margin-top: 30px;" class="product-description">
+        <?php echo $this->productInfo['description'] ?>
+      </div>
       <hr>
+
       <div id="comments">
         <h2>Comments</h2>
         <ul>
