--- a/public/templates/default/sub_layout.phtml
+++ b/public/templates/default/sub_layout.phtml
@@ -8,28 +8,11 @@
 	<?php echo $this->headLink(); ?>
 </head>
 <body id="top">
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- Top Background Image Wrapper -->
+
 <div class="bgded" style="background-image:url('<?php echo $this->imgUrl; ?>/backgrounds/01.jpg');">
   <!-- ################################################################################################ -->
-  <?php echo $this->render("helpers/menu.phtml") ?>
-  <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
-  <div class="wrapper row2">
-    <div id="breadcrumb" class="hoc clear">
-      <!-- ################################################################################################ -->
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Lorem</a></li>
-        <li><a href="#">Ipsum</a></li>
-        <li><a href="#">Dolor</a></li>
-      </ul>
-      <!-- ################################################################################################ -->
-    </div>
-  </div>
+  <?php echo $this->render("helpers/menu.phtml"); ?>
+  <?php echo $this->render("helpers/sub_path.phtml"); ?>
   <!-- ################################################################################################ -->
 </div>
 
