--- a/public/templates/default/helpers/menu.phtml
+++ b/public/templates/default/helpers/menu.phtml
@@ -9,7 +9,7 @@
           <li><a href="<?php echo $this->baseUrl('user/profile'); ?>">プロフィール</a></li>
           <li><a href="<?php echo $this->baseUrl('auth/logout'); ?>">ログアウト</a></li>
         <?php else: ?>
-          <li><a href="#" onclick="login()">ログイン</a></li>
+          <li><a onclick="login()">ログイン</a></li>
         <?php endif; ?>
       </ul>
       <!-- ################################################################################################ -->
