--- a/public/templates/default/css/custom.css
+++ b/public/templates/default/css/custom.css
@@ -70,3 +70,10 @@ iframe {
   text-align: left;
   color: #f00;
 }
+
+.like-block {
+  display: inline-block;
+  float: right;
+  margin: 8px;
+  font-size: 15px;
+}
