--- a/public/templates/default/helpers/footer.phtml
+++ b/public/templates/default/helpers/footer.phtml
@@ -1,7 +1,7 @@
 <div class="wrapper row4">
   <footer id="footer" class="hoc clear">
     <!-- ################################################################################################ -->
-    <div class="one_quarter first">
+    <div class="one_third first">
       <h6 class="title">連絡アドレス</h6>
       <ul class="nospace linklist contact">
         <li><i class="fa fa-map-marker"></i>
@@ -14,10 +14,7 @@
         <li><i class="fa fa-envelope-o"></i> info@elife.co.jp</li>
       </ul>
     </div>
-    <div class="one_quarter">
-      <h6 class="title"></h6>
-    </div>
-    <div class="one_quarter">
+    <div class="one_third">
       <h6 class="title">Suscipit magna sed</h6>
       <form method="post" action="#">
         <fieldset>
@@ -28,7 +25,7 @@
         </fieldset>
       </form>
     </div>
-    <div class="one_quarter">
+    <div class="one_third">
       <h6 class="title">Sed elit nullam</h6>
       <ul class="nospace linklist">
         <li>
