--- a/application/modules/admin/views/scripts/index/index.phtml
+++ b/application/modules/admin/views/scripts/index/index.phtml
@@ -9,8 +9,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">ログイン <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">商品一覧</a></li>
-        <li><a href="#">新商品追加</a></li>
+        <li><a href="#">商品管理</a></li>
+        <li><a href="#">履歴</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
