--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -5,36 +5,19 @@
       <h2 class="heading">気になるような商品</h2>
     </div>
     <ul class="nospace elements">
-      <li class="one_third first">
-        <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
-          <div class="txtwrap">
-            <h6 class="heading">Malesuada posuere</h6>
-            <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
-            <p>Ante pulvinar hendrerit ipsum ut scelerisque sapien purus sit amet&hellip;</p>
-            <footer><a href="http://www.match.com/productbrowser">Read More &raquo;</a></footer>
-          </div>
-        </article>
-      </li>
-      <li class="one_third">
-        <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
-          <div class="txtwrap">
-            <h6 class="heading">Vivamus sit amet</h6>
-            <time datetime="2045-04-05">5<sup>th</sup> April 2045</time>
-            <p>Sagittis in aenean porta semper tortor vel blandit magna integer ac&hellip;</p>
-            <footer><a href="http://www.match.com/productbrowser">Read More &raquo;</a></footer>
-          </div>
-        </article>
-      </li>
-      <li class="one_third">
-        <article><a href="http://www.match.com/productbrowser"><img src="<?php echo $this->imgUrl; ?>/320x220.png" alt=""></a>
-          <div class="txtwrap">
-            <h6 class="heading">Pulvinar nisl non</h6>
-            <time datetime="2045-04-04">4<sup>th</sup> April 2045</time>
-            <p>Neque malesuada euismod proin sit amet nisl velit mauris orci nisl&hellip;</p>
-            <footer><a href="http://www.match.com/productbrowser">Read More &raquo;</a></footer>
-          </div>
-        </article>
-      </li>
+      <?php foreach($this->recommendation as $r):?>
+        <li class="one_quarter">
+          <article>
+            <a href="<?php echo $this->baseUrl('product/detail/idcat/' . $r['idCat'] . '/page/1/id/' . $r['id']); ?>">
+              <img src="<?php echo $r['img']; ?>">
+            </a>
+            <div class="txtwrap">
+              <p class="textProductName"><?php echo $r['name']; ?></p>
+              <footer><a href="<?php echo $this->baseUrl('product/detail/idcat/' . $r['idCat'] . '/page/1/id/' . $r['id']); ?>">Read More &raquo;</a></footer>
+            </div>
+          </article>
+        </li>
+      <?php endforeach; ?>
     </ul>
     <!-- ################################################################################################ -->
   </section>
