--- a/public/templates/admin/css/custom.css
+++ b/public/templates/admin/css/custom.css
@@ -1,28 +1,6 @@
-#searchBox {
-  border-color:#82A800;
-  margin-bottom: 5px;
+footer {
+  background-color: #e7e7e7;
+  margin-top: 5px;
   text-align: center;
-  border-radius: 0;
-}
-
-iframe {
-  border: none;
-  width: 100%;
-}
-
-.login-ifame {
-  height: 220px;
-}
-
-.login-content-dialog {
-  width: 400px;
-}
-
-.create-account-ifame {
-  height: 290px;
-}
-
-.textProductName {
-  height: 200px;
-  overflow: hidden;
+  padding: 5px;
 }
