--- a/public/templates/admin/layout.phtml
+++ b/public/templates/admin/layout.phtml
@@ -2,12 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <base href="public/templates/default/"/>
+    <base href="<?php echo $this->baseUrl('public/templates/admin/'); ?>"/>
     <?php echo $this->headTitle(); ?>
     <?php echo $this->headLink(); ?>
     <?php echo $this->headScript(); ?>
   </head>
   <body>
+    <?php echo $this->render('./helpers/header.phtml'); ?>
+
     <?php echo $this->layout()->content; ?>
+
+    <?php echo $this->render('./helpers/footer.phtml'); ?>
   </body>
 </html>
