--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -2,7 +2,7 @@
   <section class="hoc container clear">
     <!-- ################################################################################################ -->
     <div class="center btmspace-50">
-      <h2 class="heading">気になるような商品</h2>
+      <h2 class="heading">おすすめの商品</h2>
     </div>
     <ul class="nospace elements">
       <?php foreach($this->recommendation as $r):?>
