--- a/application/modules/default/views/scripts/product/detail.phtml
+++ b/application/modules/default/views/scripts/product/detail.phtml
@@ -1,6 +1,10 @@
 <?php
   $idUser = $this->currentUser->id;
   $idProduct = $this->arrayParams['id'];
+
+  if ($this->currentUser !== null) {
+      $this->userProductModel->insertNewRelation($idUser, $idProduct);
+  }
 ?>
 <div class="wrapper row3">
   <main class="hoc container clear">
